# taca-ua-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUTHENTICATION_EXAMPLES.py  AUTH_INTEGRATION_SUMMARY.md  FRONTEND_KEYCLOAK_INTEGRATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  KEYCLOAK_AUTH_SETUP.md  PRE_COMMIT_SETUP.md  QUICKSTART.md  README.md  TournamentDetail.tsx  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  generate_openapi_schemas.py  package-lock.json
.github/workflows/: build-matrix.yml  build.yml  cd.yml  ci.yml  deploy.yml
docs/: ADMIN_AUTHENTICATION.md  API_CHANGES_PUBLIC.md  API_ENDPOINTS.md  AUTH_INTEGRATION_SUMMARY.md  CHANGELOG_API_ALIGNMENT.md  DATABASE_MODELS.md  DB_MIGRATIONS.md  DEV_SETUP.md  EVENT_CATALOG.md  FRONTEND_KEYCLOAK_INTEGRATION.md  FRONTEND_PUBLIC_WEBSITE.md  IMPLEMENTATION_CHECKLIST.md  KEYCLOAK.md  KEYCLOAK_AUTH_SETUP.md  MICROSERVICES_INTERNAL_ENDPOINTS.md  OBJECT_STORAGE_API.md  PRE_COMMIT_SETUP.md  SCHEMA_EVOLUTION.md  SNAPSHOT_ENDPOINTS_IMPLEMENTATION_SUMMARY.md  SNAPSHOT_ENDPOINT_IMPLEMENTATION_GUIDE.md  STORAGE_SERVICE_API.md  STRUCTURED_LOGGING.md  TLS_SETUP.md
scripts/: init-letsencrypt.sh  setup-ssl-nginx.sh  update-nginx-ssl.py  verify-tls-setup.sh
src/apis/competiotion-api/: Dockerfile  Dockerfile.dev  keycloak_example.py  manage.py  requirements.txt  schema.yml  test_file_upload.py
src/apis/competition-api-v2/: Dockerfile  Dockerfile.dev  manage.py
src/apis/competition-api-v3/: Dockerfile  Dockerfile.dev  requirements.txt
src/apis/competition_api_v2/: requirements.txt
src/apis/public-api/: Dockerfile  Dockerfile.dev  README.md  requirements.txt
src/configs/certbot/: init-certbot.sh
src/configs/keycloak/: realm-export.json
src/shared/: __init__.py  auth.py  pyproject.toml
src/shared/contracts/read-model-shared/: README.md
src/shared/contracts/read-model-shared/taca_models/: __init__.py  models.py
src/shared/contracts/taca-events/: README.md  pyproject.toml  setup.py
src/shared/contracts/taca-events/taca_events/: __init__.py  builder.py  registry.py  types.py
src/shared/contracts/taca-events/taca_events/pydantic_schemas/: __init__.py  base.py  courses.py  matches.py  modalities.py  modality_types.py  nucleos.py  ranking.py  registry.py  regulations.py  seasons.py  staff.py  students.py  teams.py  tournaments.py
src/shared/contracts/taca-events/taca_events/schemas/: modalities.py
src/shared/contracts/taca-events/taca_events/tests/: __init__.py  test_builder.py
src/shared/contracts/taca-snapshots/: pyproject.toml
src/shared/contracts/taca-snapshots/taca_snapshots/: __init__.py  matches.py  modalities.py  ranking.py  tournaments.py
src/shared/platform/taca-logging/: README.md  pyproject.toml  setup.py
src/shared/platform/taca-logging/taca_logging/: fastapi_middleware.py  structlog_config.py
src/shared/platform/taca-messaging/: pyproject.toml  requirements-dev.txt
src/shared/platform/taca-messaging/taca_messaging/: README.md  __init__.py  example_usage.py  rabbitmq_service.py  test_rabbitmq_service.py
src/shared/platform/taca-outbox/: pyproject.toml
src/shared/platform/taca-outbox/taca_outbox/: __init__.py  models.py  publisher.py
src/shared/platform/taca-rebuild/: pyproject.toml
src/shared/platform/taca-rebuild/taca_rebuild/: __init__.py  dto.py  fetcher.py  router.py  service.py  sse_fetcher.py  sse_router.py  sse_service.py
src/shared/platform/taca-storage/: pyproject.toml  setup.py
src/shared/platform/taca-storage/taca_storage/: __init__.py  file_service.py  minio_service.py
src/shared/rabbitmq-service/: setup.py
src/shared/read-model-shared/: pyproject.toml  setup.py
src/shared/read-model-shared/taca_models/: __init__.py  metadata.py  models.py
src/shared/storage_client/: __init__.py  storage_client.py
src/shared/taca-events/: README.md  pyproject.toml  requirements.txt
src/shared/taca-events/taca_events/: __init__.py  builder.py  types.py  validator.py
src/shared/taca-events/taca_events/pydantic_schemas/: registry.py
src/shared/taca-events/taca_events/schemas/: __init__.py  base.py  matches.py  modalities.py  tournaments.py
src/shared/taca-events/taca_events/tests/: test_schemas.py
src/shared/taca-logging/taca_logging/: __init__.py  fastapi_middleware.py
src/shared/taca-messaging/: __init__.py
src/shared/taca-messaging/taca_messaging/: rabbitmq_service.py
src/shared/taca-outbox/: pyproject.toml
src/shared/taca-outbox/taca_outbox/: publisher.py
src/shared/taca-snapshots/taca_snapshots/: base.py
src/shared/taca_messaging/: README.md  __init__.py  example_usage.py  rabbitmq_service.py  test_rabbitmq_service.py
tests/performance/: README.md  _report.js  latency.js  peak.js  smoke.js  soak.js  spike.js  stress.js  throughput.js
tools/: populate_db.py  populate_db2.py  scraper.py  test_api.py  test_snapshot_endpoints.py
tools/data/: config_cursos_revised.py  processed_data.py
(+978 files in other folders)
