[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taca-messaging"
version = "0.1.0"
description = "RabbitMQ messaging utilities for TACA-UA microservices"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "TACA-UA Team"}
]
dependencies = [
    "aio-pika>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["taca_messaging*"]

[tool.setuptools.package-data]
taca_messaging = ["py.typed"]
