[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taca-messaging"
version = "0.1.0"
description = "RabbitMQ messaging utilities for TACA-UA microservices"
readme = "taca_messaging/README.md"
requires-python = ">=3.10"
authors = [
    {name = "TACA-UA Team"}
]
dependencies = [
    "aio-pika>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["taca_messaging*"]

[tool.setuptools.package-data]
taca_messaging = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["taca_messaging"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["taca_messaging"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/example_usage.py"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
