[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taca-rebuild"
version = "1.0.0"
description = "Generic rebuild orchestration framework for TACA-UA microservices"
requires-python = ">=3.10"
authors = [
    {name = "TACA-UA Team"}
]
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["taca_rebuild*"]

[tool.setuptools.package-data]
taca_rebuild = ["py.typed"]
